--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "talk-vite",
   "private": true,
-  "version": "2.1.3",
+  "version": "2.1.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@nextui-org/react": "^2.3.5",
     "@tanstack/react-virtual": "^3.0.0-beta.60",
     "@types/highlight.js": "^10.1.0",
     "@types/markdown-it": "^13.0.2",
@@ -20,7 +21,7 @@
     "crypto-js": "4.2.0",
     "date-fns": "^2.30.0",
     "downshift": "^8.1.0",
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^11.1.5",
     "granim": "^2.0.0",
     "highlight.js": "^11.8.0",
     "highlightjs-copy": "^1.0.5",
